@@ -190,6 +190,8 @@ class ImmediateTestResult(unittest._TextTestResult):
             self._maxWidth -= len('xxxx/xxxx (xxx.x%): ') + 1
 
     def stopTest(self, test):
+        import time
+        print time.time()-self._time
         if gc.garbage:
             print test
             print gc.garbage
@@ -204,6 +206,9 @@ class ImmediateTestResult(unittest._TextTestResult):
         errlist.append((test, tb))
 
     def startTest(self, test):
+        import time
+        self._time=time.time()
+
         if self._progress:
             self.stream.write('\r%4d' % (self.testsRun + 1))
             if self._count:
@@ -273,7 +278,11 @@ class ImmediateTestRunner(unittest.TextTestRunner):
 
     def run(self, test):
         self._count = test.countTestCases()
-        return unittest.TextTestRunner.run(self, test)
+        import time
+        t=time.time()
+        ret=unittest.TextTestRunner.run(self, test)
+        print time.time()-t
+        return ret
 
 
 # setup list of directories to put on the path
